Fix element misalignment.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,10 +25,10 @@ html {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   width: 100%;
   max-width: 100ch;
-  padding: 1rem;
+  padding: 0;
   line-height: 1.5;
 }
 
